update demoted.cfg, demoted.cfg.trusty, mirrors.cfg

--- a/utils/demoted.cfg
+++ b/utils/demoted.cfg
@@ -1,8 +1,65 @@
 # demoted packages from wily to xenial
+account-plugin-aim
+account-plugin-jabber
+account-plugin-salut
+account-plugin-yahoo
+apt-xapian-index
+bacula
+bacula-client
+bacula-common
+bacula-common-dbg
+bacula-common-mysql
+bacula-common-mysql-dbg
+bacula-common-pgsql
+bacula-common-pgsql-dbg
+bacula-common-sqlite3
+bacula-common-sqlite3-dbg
+bacula-console
+bacula-console-dbg
+bacula-console-qt
+bacula-console-qt-dbg
+bacula-director-common
+bacula-director-common-dbg
+bacula-director-mysql
+bacula-director-mysql-dbg
+bacula-director-pgsql
+bacula-director-pgsql-dbg
+bacula-director-sqlite3
+bacula-director-sqlite3-dbg
+bacula-fd
+bacula-fd-dbg
+bacula-sd
+bacula-sd-dbg
+bacula-sd-mysql
+bacula-sd-mysql-dbg
+bacula-sd-pgsql
+bacula-sd-pgsql-dbg
+bacula-sd-sqlite3
+bacula-sd-sqlite3-dbg
+bacula-server
+brasero-cdrkit
+cliff-tablib
+clvm
 cpp-4.7
 cpp-4.7-doc
+dh-php5
+empathy
+empathy-common
+empathy-dbg
+evolution
+evolution-common
+evolution-dbg
+evolution-dev
+evolution-indicator
+evolution-plugins
 facter
+finch
+finch-dev
+folks-common
+fonts-droid
 fonts-wqy-microhei
+fop
+fop-doc
 g++-4.7
 g++-5-multilib-arm-linux-gnueabihf
 g++-5-multilib-powerpc-linux-gnu
@@ -13,12 +70,43 @@ gcc-4.7-plugin-dev
 gcc-5-multilib-arm-linux-gnueabihf
 gcc-5-multilib-powerpc-linux-gnu
 gccgo-4.7-doc
+gimp-help-ca
+gimp-help-common
+gimp-help-de
+gimp-help-el
+gimp-help-en
+gimp-help-es
+gimp-help-fr
+gimp-help-it
+gimp-help-ja
+gimp-help-ko
+gimp-help-nl
+gimp-help-nn
+gimp-help-pt
+gimp-help-ru
+gimp-help-sl
+gimp-help-sv
+gir1.2-champlain-0.12
+gir1.2-colordgtk-1.0
+gir1.2-folks-0.6
+gir1.2-gtkchamplain-0.12
+gir1.2-javascriptcoregtk-3.0
+gir1.2-telepathylogger-0.2
+gir1.2-webkit-3.0
+gir1.2-webkit2-3.0
+gnome-contacts
+gnome-control-center-dev
+gnutls-bin
+gtk2-engines
+gtk2-engines-pixbuf
 hiera
+human-theme
 icedtea-netx
 icedtea-netx-common
 icedtea-plugin
 ldm
 ldm-server
+ldm-ubuntu-theme
 lib32gcc-4.7-dev
 lib32gfortran-4.7-dev
 lib32objc-4.7-dev
@@ -33,21 +121,99 @@ lib64objc-4.7-dev
 lib64stdc++-5-dev-powerpc-cross
 lib64stdc++6-powerpc-cross
 lib64ubsan0-powerpc-cross
+libarchive-extract-perl
+libbatik-java
+libboost-log-dev
+libboost-log1.58-dev
+libboost-log1.58.0
 libc6-armel-armhf-cross
 libc6-dev-armel-armhf-cross
+libchamplain-0.12-0
+libchamplain-0.12-dbg
+libchamplain-0.12-dev
+libchamplain-doc
+libchamplain-gtk-0.12-0
+libchamplain-gtk-0.12-dbg
+libchamplain-gtk-0.12-dev
+libchamplain-gtk-doc
+libck-connector-dev
+libck-connector0
 libclang-3.5-dev
+libclang-3.6-dev
 libclang-common-3.5-dev
+libclang-common-3.6-dev
 libclang1-3.5
+libclass-forward-perl
 libcloog-ppl-dev
 libcloog-ppl1
+libcolord-gtk-dev
+libcolord-gtk1
 libelfg0
 libelfg0-dev
+libevolution
+libfolks-dbg
+libfolks-dev
+libfolks-dummy-dbg
+libfolks-dummy-dev
+libfolks-dummy25
+libfolks-eds-dbg
+libfolks-eds-dev
+libfolks-eds25
+libfolks-telepathy-dbg
+libfolks-telepathy-dev
+libfolks-telepathy25
+libfolks25
+libfop-java
 libgcc-4.7-dev
 libgfortran-4.7-dev
+libjavascriptcoregtk-1.0-0
+libjavascriptcoregtk-1.0-0-dbg
+libjavascriptcoregtk-1.0-dev
+libjavascriptcoregtk-3.0-0
+libjavascriptcoregtk-3.0-0-dbg
+libjavascriptcoregtk-3.0-dev
+libjline-java
+libjline-java-doc
+liblldb-3.5
+liblldb-3.5-dev
+libllvm-3.6-ocaml-dev
+libllvm3.5-dbg
+libllvm3.5v5
+liblog-message-perl
+liblog-message-simple-perl
+libmalaga-dev
+libmalaga7
+libmeanwhile-dev
+libmeanwhile1
+libmission-control-plugins-dev
+libmission-control-plugins-doc
+libmission-control-plugins0
+libntdb-dev
+libntdb1
+libntdb1-dbg
 libobjc-4.7-dev
+libopencc-dbg
+libopencc-dev
+libopencc1
+libopencryptoki-dev
+libopencryptoki0
+libpod-latex-perl
 libppl-c4
 libppl-dev
 libppl-doc
+libpst-dev
+libpst4
+libpst4-dbg
+libpurple-bin
+libpurple-dev
+libpurple0
+libs3-2
+libs3-dev
+libsaxon-java
+libsaxon-java-doc
+libsaxon-java-gcj
+libservlet3.0-java
+libservlet3.0-java-doc
 libsfasan2-armhf-cross
 libsfatomic1-armhf-cross
 libsfgcc-5-dev-armhf-cross
@@ -57,32 +223,139 @@ libsfstdc++-5-dev-armhf-cross
 libsfstdc++6-armhf-cross
 libsfubsan0-armhf-cross
 libstdc++6-4.7-dev
+libtelepathy-logger-dev
+libtelepathy-logger-doc
+libtelepathy-logger3
+libtelepathy-logger3-dbg
+libterm-ui-perl
+libtomcat7-java
 libvala-0.28-0
 libvala-0.28-0-dbg
 libvala-0.28-dev
 libvisual-0.4-plugins
+libwebkit-dev
+libwebkit2gtk-3.0-25
+libwebkit2gtk-3.0-25-dbg
+libwebkit2gtk-3.0-dev
+libwebkitgtk-1.0-0
+libwebkitgtk-1.0-0-dbg
+libwebkitgtk-1.0-common
+libwebkitgtk-3.0-0
+libwebkitgtk-3.0-0-dbg
+libwebkitgtk-3.0-common
+libwebkitgtk-3.0-dev
+libwebkitgtk-common-dev
+libwebkitgtk-dev
 libx32gcc-4.7-dev
 libx32gfortran-4.7-dev
 libx32objc-4.7-dev
+libxmlgraphics-commons-java
+libxmlgraphics-commons-java-doc
+libytnef0
+libytnef0-dev
+libzephyr-dev
+libzephyr4
 lksctp-tools
+lldb-3.5
+llvm-3.5
+llvm-3.5-dev
+llvm-3.5-doc
+llvm-3.5-examples
+llvm-3.5-runtime
 ltsp-client
 ltsp-client-core
+ltsp-docs
 ltsp-server
 ltsp-server-standalone
 ltspfs
 ltspfsd
 ltspfsd-core
+malaga-bin
+malaga-doc
+mcp-account-manager-uoa
+module-init-tools
+nbd-client
+numlockx
+oneconf
+oneconf-common
+opencryptoki
 openjdk-7-demo
+pdksh
+phonon-backend-gstreamer
+phonon-backend-gstreamer-common
+phonon-backend-gstreamer-dbg
+phonon4qt5-backend-gstreamer
+phonon4qt5-backend-gstreamer-dbg
+php5
+php5-curl
+php5-gd
+php5-gmp
+php5-ldap
+php5-mysql
+php5-odbc
+php5-pgsql
+php5-pspell
+php5-recode
+php5-snmp
+php5-sqlite
+php5-tidy
+php5-xmlrpc
+php5-xsl
+pidgin
+pidgin-data
+pidgin-dbg
+pidgin-dev
+pidgin-libnotify
 ppl-dev
+pst-utils
+pulseaudio-esound-compat
+pulseaudio-module-droid
+pulseaudio-module-gconf
+pulseaudio-module-jack
+pulseaudio-module-lirc
+pulseaudio-module-raop
+pulseaudio-module-trust-store
+pulseaudio-module-zeroconf
 puppet
 puppet-common
 puppetmaster
 puppetmaster-common
+python-avahi
+python-characteristic
+python-convoy
+python-crochet
+python-cups
 python-curtin
+python-debtagshw
+python-dirspec
+python-distro-info
+python-django-piston
+python-django-south
+python-django16
+python-djorm-ext-pgarray
+python-dns
+python-gi-cairo
+python-lldb-3.5
+python-mocker
+python-ntdb
+python-ntdb-dbg
+python-oneconf
+python-piston-mini-client
+python-seamicroclient
 python-simplestreams
+python-tablib
+python-txtftp
+python-ubuntu-sso-client
+python-ubuntuone-devtools
+python-zeitgeist
+python3-characteristic
+python3-oneconf
+python3-piston-mini-client
 qt3d5-dbg
 qt3d5-dev
 qt3d5-examples
+rhythmbox-plugin-cdrecorder
+rhythmbox-plugin-magnatune
 ruby-augeas
 ruby-deep-merge
 ruby-hashie
@@ -91,8 +364,34 @@ ruby-rgen
 ruby-safe-yaml
 ruby-selinux
 ruby-shadow
+software-center
+software-center-aptdaemon-plugins
+ssh-askpass-gnome
+sshfs
+sshfs-dbg
+telepathy-gabble
+telepathy-gabble-dbg
+telepathy-haze
+telepathy-haze-dbg
+telepathy-idle
+telepathy-indicator
+telepathy-logger
+telepathy-mission-control-5
+telepathy-mission-control-5-dbg
+telepathy-salut
+telepathy-salut-dbg
 tmake
+tomcat7
+tomcat7-admin
+tomcat7-common
+tomcat7-docs
+tomcat7-examples
 ttf-wqy-microhei
+ubuntu-sso-client
+ubuntu-sso-client-qt
+ubuntuone-client-data
+ubuntuone-dev-tools
+udhcpc
 unity-scope-audacious
 unity-scope-clementine
 unity-scope-gmusicbrowser
@@ -103,4 +402,20 @@ vala-0.28-doc
 valac-0.28
 valac-0.28-dbg
 valac-0.28-vapi
+wodim
 xdelta3
+xserver-xorg-video-cirrus
+xserver-xorg-video-mach64
+xserver-xorg-video-mach64-dbg
+xserver-xorg-video-mga
+xserver-xorg-video-neomagic
+xserver-xorg-video-openchrome
+xserver-xorg-video-openchrome-dbg
+xserver-xorg-video-r128
+xserver-xorg-video-r128-dbg
+xserver-xorg-video-savage
+xserver-xorg-video-siliconmotion
+xserver-xorg-video-sisusb
+xserver-xorg-video-tdfx
+xserver-xorg-video-trident
+zeitgeist
