update mirrors and demotions

--- a/utils/demoted.cfg
+++ b/utils/demoted.cfg
@@ -1,9 +1,12 @@
 # demoted packages from wily to xenial
+abi-compliance-checker
 account-plugin-aim
 account-plugin-jabber
 account-plugin-salut
 account-plugin-yahoo
+acpica-tools
 ant
+ant-contrib
 ant-doc
 ant-gcj
 ant-optional
@@ -11,9 +14,12 @@ ant-optional-gcj
 appstream-util
 apt-xapian-index
 asciidoc
+autoconf-archive
 autoconf2.13
+autoconf2.64
 automake1.11
 automoc
+autopoint
 bacula
 bacula-client
 bacula-common
@@ -47,6 +53,16 @@ bacula-sd-pgsql-dbg
 bacula-sd-sqlite3
 bacula-sd-sqlite3-dbg
 bacula-server
+bandit
+bats
+bcc
+bdfresize
+beanstalkd
+bf-utf-source
+bin86
+binutils-arm-linux-gnueabi
+binutils-s390x-linux-gnu
+binutils-source
 brasero
 brasero-cdrkit
 brasero-common
@@ -54,27 +70,50 @@ bsh-doc
 byacc-j
 camlp4
 camlp5
+check
+chrpath
 cliff-tablib
 clvm
+cm-super
+cm-super-minimal
 cmake-extras
 cmake-fedora
+cmocka-doc
 cpp-4.7
 cpp-4.7-doc
+cpp-4.9
+cpp-4.9-doc
+cramfsprogs
+cup
 cvsps
 cython
 cython-dbg
 cython-doc
 cython3
 cython3-dbg
+d-shlibs
+datefudge
 dblatex
 dbus-test-runner
 debiandoc-sgml
+default-jdk
 deja-dup-backend-gvfs
 dejagnu
+device-tree-compiler
+dh-apparmor
+dh-apport
+dh-autoreconf
+dh-buildinfo
+dh-di
+dh-exec
+dh-golang
 dh-lua
+dh-migrations
+dh-modaliases
 dh-ocaml
 dh-systemd
 dialog
+dictfmt
 docbook
 docbook-dsssl
 docbook-to-man
@@ -82,13 +121,18 @@ docbook-utils
 docbook-xsl-ns
 docbook2x
 docbook5-xml
+doxygen-latex
 dpatch
 dvd+rw-tools
 dvd+rw-tools-dbg
+dwarves
 electric-fence
+elfutils
+elks-libc
 empathy
 empathy-common
 empathy-dbg
+epydoc-doc
 esound-common
 evolution
 evolution-common
@@ -96,9 +140,13 @@ evolution-dbg
 evolution-dev
 evolution-indicator
 evolution-plugins
+execstack
+expat
 expect
 extra-cmake-modules
 facter
+faketime
+fdupes
 finch
 finch-dev
 flac
@@ -113,6 +161,7 @@ fonts-cantarell
 fonts-dejavu
 fonts-ipafont-gothic
 fonts-ipafont-mincho
+fonts-texgyre
 fonts-vlgothic
 fonts-wqy-microhei
 foomatic-db-engine
@@ -122,20 +171,46 @@ freeglut3
 freeglut3-dbg
 freeglut3-dev
 g++-4.7
+g++-4.9
+g++-4.9-multilib
 g++-5-multilib-arm-linux-gnueabihf
 g++-5-multilib-powerpc-linux-gnu
 gcc-4.7
 gcc-4.7-base
 gcc-4.7-doc
 gcc-4.7-plugin-dev
+gcc-4.9
+gcc-4.9-base
+gcc-4.9-doc
+gcc-4.9-multilib
+gcc-4.9-plugin-dev
+gcc-4.9-source
 gcc-5-multilib-arm-linux-gnueabihf
 gcc-5-multilib-powerpc-linux-gnu
+gcc-5-source
 gccgo-4.7-doc
+gccgo-4.9-doc
+gcj-4.9
+gcj-4.9-jdk
+gcj-4.9-jre
+gcj-4.9-jre-headless
+gcj-4.9-jre-lib
+gcj-4.9-source
+gcj-jdk
+gcj-jre
+gcj-jre-headless
+gcj-native-helper
+gem2deb
+gem2deb-test-runner
+genext2fs
 geoclue-2.0
 geoclue-hostip
 geoclue-localnet
 geoclue-nominatim
 gf-complete-tools
+gfortran-4.9
+gfortran-4.9-doc
+gfortran-4.9-multilib
 gimp
 gimp-data
 gimp-dbg
@@ -174,9 +249,14 @@ gir1.2-gupnpigd-1.0
 gir1.2-javascriptcoregtk-3.0
 gir1.2-mx-1.0
 gir1.2-telepathylogger-0.2
+gir1.2-ubuntu-app-launch-2
 gir1.2-uhm-0.0
+gir1.2-umockdev-1.0
 gir1.2-webkit-3.0
 gir1.2-webkit2-3.0
+glibc-source
+gnat-5
+gnome-common
 gnome-contacts
 gnome-control-center-dev
 gnome-doc-utils
@@ -184,7 +264,12 @@ gnome-mime-data
 gnome-pkg-tools
 gnutls-bin
 gob2
+gobjc
+gobjc++
+gobjc++-5
+gobjc-5
 google-mock
+gperf
 grantlee-dbg
 growisofs
 gsfonts-x11
@@ -208,15 +293,29 @@ gtester2xunit
 gtk-doc-tools
 gtk2-engines
 gtk2-engines-pixbuf
+gunicorn
+gunicorn-examples
+gyp
+hardening-wrapper
+help2man
 hevea
 hiera
+hspell
+html2text
 htmldoc
 htmldoc-common
 human-theme
+iamerican
+iasl
 icedtea-netx
 icedtea-netx-common
 icedtea-plugin
 icon-naming-utils
+ienglish-common
+ispell
+itstool
+ivy
+ivy-doc
 jade
 jadetex
 java-wrappers
@@ -224,6 +323,9 @@ javacc
 javahelper
 jflex
 jlex
+juju-core
+juju-local
+juju-mongodb
 junit
 junit-doc
 junit4
@@ -233,6 +335,11 @@ kdelibs5-data
 kdelibs5-dbg
 kdelibs5-dev
 kdoctools
+kernel-wedge
+keymapper
+konwert
+konwert-dev
+konwert-filters
 latex2html
 lcov
 ldm
@@ -240,26 +347,45 @@ ldm-server
 ldm-ubuntu-theme
 ldp-docbook-xsl
 ledit
+lib32asan1
+lib32asan1-dbg
 lib32gcc-4.7-dev
+lib32gcc-4.9-dev
 lib32gfortran-4.7-dev
+lib32gfortran-4.9-dev
 lib32objc-4.7-dev
+lib32objc-4.9-dev
+lib32stdc++-4.9-dev
+lib32stdc++6-4.9-dbg
+lib64asan1
+lib64asan1-dbg
 lib64asan2-powerpc-cross
 lib64atomic1-powerpc-cross
 lib64gcc-4.7-dev
+lib64gcc-4.9-dev
 lib64gcc-5-dev-powerpc-cross
 lib64gcc1-powerpc-cross
 lib64gfortran-4.7-dev
+lib64gfortran-4.9-dev
 lib64gomp1-powerpc-cross
 lib64objc-4.7-dev
+lib64objc-4.9-dev
+lib64stdc++-4.9-dev
 lib64stdc++-5-dev-powerpc-cross
+lib64stdc++6-4.9-dbg
 lib64stdc++6-powerpc-cross
 lib64ubsan0-powerpc-cross
+libadns1
+libadns1-dbg
+libadns1-dev
 libalgorithm-c3-perl
 libaliased-perl
 libany-moose-perl
 libapache-pom-java
 libapp-fatpacker-perl
 libarchive-extract-perl
+libasan1
+libasan1-dbg
 libasm3-java
 libasm3-java-doc
 libasm4-java
@@ -333,9 +459,20 @@ libburn4
 libbusiness-isbn-data-perl
 libbusiness-isbn-perl
 libc6-armel-armhf-cross
+libc6-armel-cross
 libc6-dev-armel-armhf-cross
+libc6-dev-armel-cross
+libc6-dev-ppc64-powerpc-cross
+libc6-dev-s390-s390x-cross
+libc6-dev-s390x-cross
+libc6-pic
+libc6-ppc64-powerpc-cross
+libc6-s390-s390x-cross
+libc6-s390x-cross
 libcapture-tiny-perl
 libcarp-clan-perl
+libcdio-cdda-dev
+libcdio-paranoia-dev
 libcglib3-java
 libcglib3-java-doc
 libchamplain-0.12-0
@@ -350,6 +487,7 @@ libclang-3.5-dev
 libclang-3.6-dev
 libclang-common-3.5-dev
 libclang-common-3.6-dev
+libclang-dev
 libclang1-3.5
 libclass-c3-perl
 libclass-c3-xs-perl
@@ -365,12 +503,16 @@ libclass-method-modifiers-perl
 libclass-singleton-perl
 libclass-tiny-perl
 libclass-xsaccessor-perl
+libcloog-isl-dev
+libcloog-isl4
 libcloog-ppl-dev
 libcloog-ppl1
 libclutter-gst-2.0-0
 libclutter-gst-2.0-dbg
 libclutter-gst-2.0-dev
 libclutter-gst-2.0-doc
+libcmocka-dev
+libcmocka0
 libcolord-gtk-dev
 libcolord-gtk1
 libcommons-cli-java
@@ -488,6 +630,7 @@ libextutils-config-perl
 libextutils-depends-perl
 libextutils-helpers-perl
 libextutils-installpaths-perl
+libfaketime
 libfarstream-0.1-0
 libfarstream-0.1-dbg
 libfarstream-0.1-dev
@@ -531,10 +674,16 @@ libfontforge-dev
 libfontforge1
 libfop-java
 libfreezethaw-perl
+libfribidi-bin
 libftdi-dev
 libftdi1
 libftdi1-dbg
 libgcc-4.7-dev
+libgcc-4.9-dev
+libgcj15
+libgcj15-awt
+libgcj15-dbg
+libgcj15-dev
 libgd-barcode-perl
 libgdraw4
 libgegl-0.3-0
@@ -549,6 +698,7 @@ libgflags-dev
 libgflags-doc
 libgflags2v5
 libgfortran-4.7-dev
+libgfortran-4.9-dev
 libgimp2.0
 libgimp2.0-dev
 libgimp2.0-doc
@@ -556,6 +706,9 @@ libgladeui-2-6
 libgladeui-common
 libgladeui-dev
 libgladeui-doc
+libgnat-5
+libgnatprj5
+libgnatvsn5
 libgnuinet-java
 libgnumail-java
 libgnumail-java-doc
@@ -650,6 +803,8 @@ libjline-java
 libjline-java-doc
 libjmock-java
 libjmock-java-doc
+libjs-jquery-hotkeys
+libjs-jquery-isonscreen
 libjs-jquery-metadata
 libjs-jquery-tablesorter
 libjsch-java
@@ -713,6 +868,9 @@ libmatch-simple-xs-perl
 libmce-perl
 libmeanwhile-dev
 libmeanwhile1
+libmilter-dev
+libmilter1.0.1
+libmilter1.0.1-dbg
 libmime-charset-perl
 libmission-control-plugins-dev
 libmission-control-plugins-doc
@@ -757,6 +915,7 @@ libmx-bin
 libmx-common
 libmx-dev
 libmx-doc
+libmysqlclient18
 libmysqlcppconn-dev
 libmysqlcppconn7v5
 libnamespace-autoclean-perl
@@ -772,16 +931,20 @@ libnetfilter-cttimeout1-dbg
 libnetfilter-queue-dev
 libnetfilter-queue1
 libnetfilter-queue1-dbg
+libnewt-pic
 libnice-dbg
 libnice-dev
 libnice-doc
 libnice10
+libnss-wrapper
 libnss3-tools
 libntdb-dev
 libntdb1
 libntdb1-dbg
 libnumber-compare-perl
+libnunit-doc
 libobjc-4.7-dev
+libobjc-4.9-dev
 libobject-accessor-perl
 libopencc-dbg
 libopencc-dev
@@ -809,6 +972,7 @@ libpath-tiny-perl
 libpegex-perl
 libperl-critic-perl
 libperl-minimumversion-perl
+libphobos-4.9-dev
 libphonon-dev
 libphonon4
 libphonon4qt5-4
@@ -818,6 +982,9 @@ libphonon4qt5experimental4
 libphononexperimental-dev
 libphononexperimental4
 libphp-serialization-perl
+libpisock-dev
+libpisock9
+libpisync1
 libplasma3
 libpod-coverage-perl
 libpod-latex-perl
@@ -854,6 +1021,10 @@ libqjson-dbg
 libqjson-dev
 libqjson0
 libqjson0-dbg
+libqt5clucene5
+libqt5designer5
+libqt5designercomponents5
+libqt5help5
 libqt5script5
 libqt5scripttools5
 libqt5sensors5
@@ -908,6 +1079,7 @@ libsfstdc++-5-dev-armhf-cross
 libsfstdc++6-armhf-cross
 libsfubsan0-armhf-cross
 libsgmls-perl
+libslang2-pic
 libsoftware-license-perl
 libsolid4
 libsombok-dev
@@ -922,7 +1094,11 @@ libspiro0
 libspiro0-dbg
 libstax-java
 libstax-java-doc
+libstdc++-4.9-dev
+libstdc++-4.9-doc
+libstdc++-4.9-pic
 libstdc++6-4.7-dev
+libstdc++6-4.9-dbg
 libstreamanalyzer-dev
 libstreamanalyzer0v5
 libstreams-dev
@@ -934,12 +1110,14 @@ libstrigiqtdbusclient-dev
 libstrigiqtdbusclient0v5
 libstring-format-perl
 libstring-shellquote-perl
+libstylebook-java
 libsub-exporter-perl
 libsub-exporter-progressive-perl
 libsub-identify-perl
 libsub-infix-perl
 libsub-install-perl
 libsub-uplevel-perl
+libsubunit-perl
 libsuper-perl
 libsyntax-keyword-junction-perl
 libsyntax-perl
@@ -1005,14 +1183,22 @@ libtext-soundex-perl
 libtext-template-perl
 libtext-unidecode-perl
 libthreadweaver4
+libtiff-tools
 libtk8.5
 libtk8.5-dbg
 libtomcat7-java
+libtrust-store-dev
+libtrust-store2
 libtry-tiny-perl
 libtype-tiny-perl
 libtype-tiny-xs-perl
+libubuntu-app-launch2
+libubuntu-app-launch2-dev
 libuhttpmock-0.0-0
 libuhttpmock-dev
+libuid-wrapper
+libumockdev-dev
+libumockdev0
 libunicode-linebreak-perl
 libunicode-map8-perl
 libunicode-string-perl
@@ -1049,9 +1235,16 @@ libwebkitgtk-dev
 libwnck-common
 libwnck-dev
 libwnck22
+libx32asan1
+libx32asan1-dbg
 libx32gcc-4.7-dev
+libx32gcc-4.9-dev
 libx32gfortran-4.7-dev
+libx32gfortran-4.9-dev
 libx32objc-4.7-dev
+libx32objc-4.9-dev
+libx32stdc++-4.9-dev
+libx32stdc++6-4.9-dbg
 libxml++2.6-2v5
 libxml++2.6-dbg
 libxml++2.6-dev
@@ -1062,6 +1255,7 @@ libxml-handler-yawriter-perl
 libxml-libxslt-perl
 libxml-sax-machines-perl
 libxml-sax-writer-perl
+libxmlbeans-java
 libxmlgraphics-commons-java
 libxmlgraphics-commons-java-doc
 libxmltok1
@@ -1089,6 +1283,11 @@ libzita-alsa-pcmi0
 libzita-resampler-dev
 libzita-resampler-doc
 libzita-resampler1
+linux-libc-dev-armel-cross
+linux-libc-dev-s390x-cross
+linuxdoc-tools
+linuxdoc-tools-latex
+linuxdoc-tools-text
 lksctp-tools
 lldb-3.5
 llvm-3.5
@@ -1096,6 +1295,8 @@ llvm-3.5-dev
 llvm-3.5-doc
 llvm-3.5-examples
 llvm-3.5-runtime
+llvm-dev
+llvm-runtime
 ltsp-client
 ltsp-client-core
 ltsp-docs
@@ -1106,21 +1307,37 @@ ltspfsd
 ltspfsd-core
 lua5.1
 lua5.3
+lynx
+lynx-cur
 malaga-bin
 malaga-doc
+markdown
+mauve
 maven-ant-helper
 maven-repo-helper
 mcp-account-manager-uoa
+mklibs
+mklibs-copy
+mksh
+mm-common
 module-init-tools
+monodoc-base
+mozilla-devscripts
 munin
 munin-common
 munin-doc
 munin-node
 munin-plugins-core
 munin-plugins-extra
+mysql-client
+mysql-common
+mysql-server
 nant
+nasm
 naturaldocs
 nbd-client
+ninja-build
+ninja-build-doc
 numlockx
 nvidia-opencl-icd-352
 nvidia-opencl-icd-352-updates
@@ -1134,8 +1351,12 @@ ocaml-nox
 oneconf
 oneconf-common
 opencryptoki
+openstack-pkg-tools
+otf2bdf
+pdf2svg
 pep8
 perltidy
+pfb2t1c2pfb
 phonon
 phonon-backend-gstreamer
 phonon-backend-gstreamer-common
@@ -1152,6 +1373,8 @@ pidgin-dbg
 pidgin-dev
 pidgin-libnotify
 pkg-kde-tools
+po4a
+postgresql-server-dev-all
 ppl-dev
 pst-utils
 psutils
@@ -1168,28 +1391,37 @@ puppet
 puppet-common
 puppetmaster
 puppetmaster-common
+pyflakes
 pylint
 pyppd
 pypy
 pypy-dev
 pypy-doc
 pypy-lib
+pypy-pkg-resources
+pypy-setuptools
 pyqt4-dev-tools
+python-adns
 python-alabaster
 python-aptdaemon
 python-aptdaemon.gtk3widgets
 python-astroid
 python-avahi
 python-awsauth
+python-bandit
 python-bcrypt
+python-beanstalkc
 python-bson
 python-bson-ext
 python-bzrlib.tests
+python-cddb
 python-changelog
 python-characteristic
 python-cheetah
 python-cherrypy3
 python-convoy
+python-coverage
+python-coverage-dbg
 python-crochet
 python-cryptography-vectors
 python-cups
@@ -1201,6 +1433,8 @@ python-ddt-doc
 python-debian
 python-debtagshw
 python-defer
+python-dictclient
+python-dictdlib
 python-dirspec
 python-distro-info
 python-distutils-extra
@@ -1209,10 +1443,14 @@ python-django-south
 python-django16
 python-djorm-ext-pgarray
 python-dns
+python-epydoc
 python-feedparser
 python-flake8
 python-fontforge
 python-gconf
+python-gd
+python-gd-dbg
+python-genetic
 python-genshi
 python-geoip
 python-gevent
@@ -1226,38 +1464,65 @@ python-gnome2-dev
 python-gnome2-doc
 python-gnomekeyring
 python-google-apputils
+python-gpod
 python-gridfs
 python-gst0.10
 python-gst0.10-dbg
 python-gst0.10-dev
+python-gunicorn
 python-hacking
 python-hacking-doc
 python-happybase
 python-hdate
+python-htmlgen
 python-httpretty
 python-ironicclient
 python-ironicclient-doc
 python-isodate
+python-jabber
 python-jingo
 python-jingo-doc
 python-junitxml
+python-kajiki
+python-ldap
+python-ldap-dbg
 python-ldappool
+python-libapparmor
+python-librdf
 python-lldb-3.5
 python-logilab-common
 python-m2crypto
+python-markdown
+python-markdown-doc
+python-mccabe
 python-mocker
 python-mox
+python-mox3
+python-mutagen
+python-mutagen-doc
+python-nine
 python-nosexcover
 python-ntdb
 python-ntdb-dbg
+python-ogg
+python-ogg-dbg
 python-oneconf
 python-os-testr
 python-os-testr-doc
+python-oslosphinx
+python-oslotest
+python-oslotest-doc
+python-pisock
+python-pisock-dbg
 python-piston-mini-client
 python-plist
 python-pretend
 python-py
+python-pyao
+python-pyao-dbg
 python-pycountry
+python-pygresql
+python-pygresql-dbg
 python-pymongo
 python-pymongo-ext
 python-pyorbit
@@ -1265,6 +1530,8 @@ python-pyorbit-dev
 python-pyruntest
 python-pytest
 python-pytest-doc
+python-pyvorbis
+python-pyvorbis-dbg
 python-qt4
 python-qt4-dbg
 python-qt4-dbus
@@ -1277,33 +1544,53 @@ python-qt4-sql
 python-qt4-sql-dbg
 python-rdflib
 python-rdflib-doc
+python-rednose
 python-renderpm
 python-reportlab
 python-reportlab-accel
+python-requests-mock
+python-requests-mock-doc
 python-rsvg
 python-rtslib-fb
 python-rtslib-fb-doc
+python-scripttest
 python-seamicroclient
 python-simplestreams
+python-simpletal
 python-sip
 python-sip-dbg
 python-sip-dev
 python-sip-doc
+python-sparqlwrapper
 python-sphinx-paramlinks
 python-sphinxcontrib.programoutput
 python-sphinxcontrib.programoutput-doc
+python-subunit
+python-sure
 python-tablib
+python-tempest-lib
+python-tempest-lib-doc
+python-termstyle
+python-testrepository
 python-testresources
+python-testscenarios
 python-thrift
+python-tidylib
+python-tornado
 python-txtftp
 python-ubuntu-sso-client
 python-ubuntuone-devtools
+python-ufw
+python-utidylib
 python-wnck
+python-xcbgen
 python-xdg
+python-xmpp
 python-zeitgeist
 python-zope.event
 python-zzzeeksphinx
 python3-anyjson
+python3-appconf
 python3-appdirs
 python3-aptdaemon.test
 python3-barbicanclient
@@ -1311,29 +1598,67 @@ python3-bcrypt
 python3-cachetools
 python3-characteristic
 python3-contextlib2
+python3-coverage
+python3-coverage-dbg
 python3-cryptography-vectors
 python3-cxx-dev
+python3-dateutil
 python3-dbus.mainloop.qt
 python3-dbus.mainloop.qt-dbg
 python3-dbusmock
 python3-ddt
+python3-debtcollector
+python3-decorator
 python3-distutils-extra
+python3-dogpile.cache
+python3-eventlet
+python3-fasteners
 python3-flake8
+python3-funcsigs
+python3-futurist
 python3-gevent
 python3-gevent-dbg
 python3-gflags
+python3-gunicorn
 python3-hacking
+python3-httpretty
 python3-isodate
 python3-jingo
+python3-jsonpath-rw
+python3-junitxml
 python3-kazoo
+python3-keystoneclient
 python3-kombu
+python3-logutils
+python3-markdown
+python3-mccabe
+python3-mock
+python3-monotonic
+python3-mox3
 python3-oneconf
+python3-os-client-config
 python3-os-testr
+python3-oslo.concurrency
+python3-oslo.config
+python3-oslo.context
+python3-oslo.i18n
+python3-oslo.log
+python3-oslo.messaging
+python3-oslo.middleware
+python3-oslo.policy
+python3-oslo.serialization
+python3-oslo.service
+python3-oslo.utils
+python3-oslotest
+python3-pecan
 python3-piston-mini-client
 python3-ply
+python3-posix-ipc
 python3-pretend
 python3-py
 python3-pycparser
+python3-pymemcache
+python3-pymysql
 python3-pyqt4
 python3-pyqt4-dbg
 python3-pyqt4.phonon
@@ -1343,30 +1668,65 @@ python3-pyqt4.qtopengl-dbg
 python3-pyqt4.qtsql
 python3-pyqt4.qtsql-dbg
 python3-pytest
+python3-repoze.lru
+python3-requests-mock
+python3-retrying
+python3-routes
+python3-simplegeneric
+python3-singledispatch
 python3-sip
 python3-sip-dbg
 python3-sip-dev
 python3-smbc
+python3-swiftclient
+python3-tempest-lib
 python3-testresources
+python3-testscenarios
+python3-warlock
+python3-werkzeug
+python3-wheel
+python3-zake
 python3-zope.event
 qt3d5-dbg
 qt3d5-dev
 qt3d5-examples
+qt4-default
+qt5-default
+qtbase5-doc
+qtbase5-doc-html
 qtdbustest-runner
+qtdeclarative5-doc-html
+qtmultimedia5-doc-html
 qtscript5-dbg
 qtscript5-dev
+qtscript5-doc
 qtscript5-doc-html
 qtscript5-examples
+qtscript5-private-dev
 qtsensors5-dbg
 qtsensors5-doc
 qtsensors5-examples
 qtsvg5-doc-html
+qttools5-dbg
+qttools5-dev
+qttools5-dev-tools
+qttools5-doc
+qttools5-examples
+qttools5-examples-dbg
+qttools5-private-dev
+qtwebkit5-doc
+qtwebkit5-doc-html
+qtxmlpatterns5-doc
 qtxmlpatterns5-doc-html
+quilt
 rarian-compat
+rdfind
+rdiff
 rhino
 rhino-doc
 rhythmbox-plugin-cdrecorder
 rhythmbox-plugin-magnatune
+rsyslog-gnutls
 ruby-augeas
 ruby-blankslate
 ruby-childprocess
@@ -1398,23 +1758,34 @@ ruby-setup
 ruby-shadow
 ruby-shoulda-context
 ruby-thread-order
+scdaemon
 scons
 sgmls-doc
 sgmlspl
+sgmltools-lite
+shunit2
+signon-plugin-ssotest
 sip-dbg
 sip-dev
+slice
+slimit
 software-center
 software-center-aptdaemon-plugins
+spell
 ssh-askpass-gnome
 sshfs
 sshfs-dbg
 strigi-dbg
+subunit
+sunpinyin-utils
 swig
 swig-doc
 swig-examples
 swig2.0
 swig2.0-doc
 swig2.0-examples
+symlinks
+syslinux-utils
 systemtap-doc
 systemtap-sdt-dev
 tcl-expect
@@ -1433,6 +1804,8 @@ telepathy-mission-control-5
 telepathy-mission-control-5-dbg
 telepathy-salut
 telepathy-salut-dbg
+testrepository
+tex-gyre
 texi2html
 texlive
 texlive-bibtex-extra
@@ -1440,11 +1813,13 @@ texlive-fonts-recommended
 texlive-lang-german
 texlive-latex-extra
 texlive-math-extra
+tidy
 tipa
 tipa-doc
 tk8.5
 tk8.5-dev
 tk8.5-doc
+tofrodos
 tomcat7
 tomcat7-admin
 tomcat7-common
@@ -1452,11 +1827,17 @@ tomcat7-docs
 tomcat7-examples
 ttf-wqy-microhei
 twm
+txt2man
+ubuntu-app-launch
 ubuntu-sso-client
 ubuntu-sso-client-qt
+ubuntu-wallpapers-wily
 ubuntuone-client-data
 ubuntuone-dev-tools
 udhcpc
+umockdev
+unbound-anchor
+unicode-data
 unity-scope-audacious
 unity-scope-clementine
 unity-scope-gmusicbrowser
@@ -1467,12 +1848,24 @@ valac
 vblade
 vorbis-tools
 vorbis-tools-dbg
+w3m
+wamerican-huge
+wamerican-insane
+wamerican-large
+wamerican-small
 watershed
+wbritish-huge
+wbritish-insane
+wbritish-large
+wbritish-small
 wodim
 xaw3dg
 xaw3dg-dev
+xcb-proto
 xdelta3
 xfpt
+xkb-data-i18n
+xmlto
 xmltoman
 xorriso
 xserver-xorg-video-cirrus
@@ -1493,6 +1886,7 @@ xutils-dev
 xvfb
 yapps2
 yapps2-runtime
+yasm
 yelp-tools
 yui-compressor
 zeitgeist
