releasing package ubuntu-release-upgrader version 1:16.04.12

--- a/utils/demoted.cfg
+++ b/utils/demoted.cfg
@@ -19,7 +19,6 @@ autoconf2.13
 autoconf2.64
 automake1.11
 automoc
-autopoint
 bacula
 bacula-client
 bacula-common
@@ -96,17 +95,11 @@ datefudge
 dblatex
 dbus-test-runner
 debiandoc-sgml
-default-jdk
 deja-dup-backend-gvfs
 dejagnu
-device-tree-compiler
 dh-apparmor
 dh-apport
-dh-autoreconf
 dh-buildinfo
-dh-di
-dh-exec
-dh-golang
 dh-lua
 dh-migrations
 dh-modaliases
@@ -335,7 +328,6 @@ kdelibs5-data
 kdelibs5-dbg
 kdelibs5-dev
 kdoctools
-kernel-wedge
 keymapper
 konwert
 konwert-dev
@@ -559,6 +551,7 @@ libcrypt-des-perl
 libcrypt-openssl-random-perl
 libcrypt-rijndael-perl
 libcss-minifier-xs-perl
+libcuda1-340-updates
 libcuda1-352
 libcuda1-352-updates
 libcunit1
@@ -773,6 +766,7 @@ libiodbc2-dev
 libipc-run3-perl
 libipc-sharedcache-perl
 libipc-sharelite-perl
+libirman-dev
 libisoburn-dbg
 libisoburn-dev
 libisoburn-doc
@@ -1329,9 +1323,6 @@ munin-doc
 munin-node
 munin-plugins-core
 munin-plugins-extra
-mysql-client
-mysql-common
-mysql-server
 nant
 nasm
 naturaldocs
@@ -1339,6 +1330,7 @@ nbd-client
 ninja-build
 ninja-build-doc
 numlockx
+nvidia-opencl-icd-340-updates
 nvidia-opencl-icd-352
 nvidia-opencl-icd-352-updates
 ocaml
