releasing package ubuntu-release-upgrader version 1:16.04.13

--- a/utils/demoted.cfg
+++ b/utils/demoted.cfg
@@ -5,6 +5,7 @@ account-plugin-jabber
 account-plugin-salut
 account-plugin-yahoo
 acpica-tools
+alien
 ant
 ant-contrib
 ant-doc
@@ -95,6 +96,7 @@ datefudge
 dblatex
 dbus-test-runner
 debiandoc-sgml
+debugedit
 deja-dup-backend-gvfs
 dejagnu
 dh-apparmor
@@ -125,6 +127,7 @@ elks-libc
 empathy
 empathy-common
 empathy-dbg
+eperl
 epydoc-doc
 esound-common
 evolution
@@ -797,6 +800,7 @@ libjline-java
 libjline-java-doc
 libjmock-java
 libjmock-java-doc
+libjpeg62
 libjs-jquery-hotkeys
 libjs-jquery-isonscreen
 libjs-jquery-metadata
@@ -909,7 +913,6 @@ libmx-bin
 libmx-common
 libmx-dev
 libmx-doc
-libmysqlclient18
 libmysqlcppconn-dev
 libmysqlcppconn7v5
 libnamespace-autoclean-perl
@@ -983,6 +986,7 @@ libplasma3
 libpod-coverage-perl
 libpod-latex-perl
 libpod-markdown-perl
+libpod-plainer-perl
 libpod-readme-perl
 libpod-spell-perl
 libpolkit-qt-1-1
@@ -1015,6 +1019,7 @@ libqjson-dbg
 libqjson-dev
 libqjson0
 libqjson0-dbg
+libqt4-sql-mysql
 libqt5clucene5
 libqt5designer5
 libqt5designercomponents5
@@ -1051,6 +1056,12 @@ librhino-java
 librhino-java-doc
 librole-tiny-perl
 libroman-perl
+librpm-dbg
+librpm-dev
+librpm3
+librpmbuild3
+librpmio3
+librpmsign3
 librsvg2-bin
 libs3-2
 libs3-dev
@@ -1342,6 +1353,7 @@ ocaml-interp
 ocaml-nox
 oneconf
 oneconf-common
+open-vm-tools-dkms
 opencryptoki
 openstack-pkg-tools
 otf2bdf
@@ -1718,6 +1730,9 @@ rhino
 rhino-doc
 rhythmbox-plugin-cdrecorder
 rhythmbox-plugin-magnatune
+rpm
+rpm-common
+rpm2cpio
 rsyslog-gnutls
 ruby-augeas
 ruby-blankslate
@@ -1834,7 +1849,6 @@ unity-scope-audacious
 unity-scope-clementine
 unity-scope-gmusicbrowser
 unity-scope-gourmet
-unity-scope-guayadeque
 unity-scope-musique
 valac
 vblade
