* DistUpgrade/{EOL,}ReleaseAnnouncement,   DistUpgrade/DistUpgrade/window_main.ui,   data/gtkbuilder/DistUpgrade.ui,   data/DistUpgrade.cfg,   pre-build.sh:   - updated for 16.04 -> 16.10 * tests/test_country_mirror.py: modify how the LANG environment variable was   being modified there by fixing a test failure in test_sources_list.py.

--- a/data/DistUpgrade.cfg
+++ b/data/DistUpgrade.cfg
@@ -3,7 +3,7 @@
 # is tried
 View=DistUpgradeViewGtk3,DistUpgradeViewKDE,DistUpgradeViewText
 #View=DistUpgradeViewNonInteractive
-#Depends= python-apt (>= 0.6.0), apt (>= 0.6)
+#Depends= apt (>= 1.0.10.2ubuntu2)
 # the views below support upgrades over ssh connection
 SupportSSH=DistUpgradeViewText,DistUpgradeViewNonInteractive
 
@@ -110,8 +110,8 @@ BackupExt=distUpgrade
 LogDir=/var/log/dist-upgrade/
 
 [Sources]
-From=wily
-To=xenial
+From=xenial
+To=yakkety
 ValidOrigin=Ubuntu
 ValidMirrors = mirrors.cfg
 Components=main,restricted,universe,multiverse
