--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -23,4 +23,4 @@ DistUpgrade/ReleaseNotesViewerWebkit.py
 [type: gettext/xml]data/com.ubuntu.release-upgrader.policy.in
 do-partial-upgrade
 do-release-upgrade
-check-new-release-gtk
+check_new_release_gtk.py
