--- a/data/DistUpgrade.cfg
+++ b/data/DistUpgrade.cfg
@@ -110,8 +110,8 @@ BackupExt=distUpgrade
 LogDir=/var/log/dist-upgrade/
 
 [Sources]
-From=xenial
-To=yakkety
+From=yakkety
+To=zesty
 ValidOrigin=Ubuntu
 ValidMirrors = mirrors.cfg
 Components=main,restricted,universe,multiverse
