data/DistUpgrade.cfg: add ubuntkylin-desktop to the list of supported metapkgs. (LP: #1632665)

--- a/data/DistUpgrade.cfg
+++ b/data/DistUpgrade.cfg
@@ -13,7 +13,8 @@ SupportSSH=DistUpgradeViewText,DistUpgradeViewNonInteractive
 MetaPkgs=ubuntu-desktop, kubuntu-desktop, xubuntu-core,
    xubuntu-desktop, ubuntustudio-desktop, mythbuntu-desktop,
    kubuntu-netbook, lubuntu-core, lubuntu-desktop, ubuntu-gnome-desktop,
-   ubuntu-mate-core, ubuntu-mate-cloudtop, ubuntu-mate-desktop
+   ubuntu-mate-core, ubuntu-mate-cloudtop, ubuntu-mate-desktop,
+   ubuntukylin-desktop
 BaseMetaPkgs=ubuntu-minimal, ubuntu-standard
 Demotions=demoted.cfg
 #RemoveEssentialOk=sysvinit, sysvutils, belocs-locales-bin
@@ -104,6 +105,9 @@ PostUpgradeRemove=ibus
 [ubuntu-mate-desktop]
 KeyDependencies=deja-dup-caja, ubuntu-mate-core, ubuntu-mate-lightdm-theme
 PostUpgradeRemove=ibus
+
+[ubuntukylin-desktop]
+KeyDependencies=ubuntukylin-keyring, ubuntukylin-wallpapers, ubuntu-kylin-docs
 
 [Files]
 BackupExt=distUpgrade
