releasing package ubuntu-release-upgrader version 1:17.04.5

--- a/utils/demoted.cfg
+++ b/utils/demoted.cfg
@@ -1,17 +1,48 @@
-# demoted packages from xenial to yakkety
-cloop-utils
-libboost-date-time1.58.0
-libboost-filesystem1.58.0
-libboost-iostreams1.58.0
-libboost-program-options1.58-dev
-libboost-program-options1.58.0
-libboost-random1.58.0
-libboost-regex1.58.0
-libboost-system1.58.0
-libboost-thread1.58.0
-libboost1.58-dbg
-libboost1.58-dev
-libboost1.58-doc
-libboost1.58-tools-dev
-libpng12-0
-libpng12-dev
+# demoted packages from yakkety to zesty
+antlr
+antlr-doc
+ecj1
+emacs24
+emacs24-bin-common
+emacs24-common
+emacs24-common-non-dfsg
+emacs24-dbg
+emacs24-el
+emacs24-lucid-dbg
+emacs24-nox
+emacs24-nox-dbg
+euca2ools
+fastjar
+g++-5
+gcj-5
+gcj-5-jdk
+gcj-5-jre
+gcj-5-jre-headless
+golang-1.6
+libantlr-dev
+libantlr-java
+libboost-atomic1.61-dev
+libboost-atomic1.61.0
+libboost-chrono1.61-dev
+libboost-chrono1.61.0
+libboost-date-time1.61-dev
+libboost-date-time1.61.0
+libboost-locale1.61.0
+libboost-log1.61.0
+libboost-program-options1.61-dev
+libboost-random1.61.0
+libboost-regex1.61.0
+libboost-serialization1.61-dev
+libboost-serialization1.61.0
+libboost-system1.61-dev
+libboost-thread1.61-dev
+libboost-thread1.61.0
+libgnome2-bin
+liblua5.1-0
+liblua5.1-0-dbg
+liblua5.1-0-dev
+lua5.1-doc
+python-requestbuilder
+xserver-xorg-input-evdev
+xserver-xorg-input-evdev-dbg
+xserver-xorg-input-evdev-dev
