--- a/data/mirrors.cfg
+++ b/data/mirrors.cfg
@@ -74,7 +74,6 @@ http://mirror.switch.ch/ftp/mirror/ubuntu/
 #===UnitedKingdom===
 http://www.mirrorservice.org/sites/archive.ubuntu.com/ubuntu/
 #===UnitedStates===
-http://lug.mtu.edu/ubuntu/
 http://mirrors.cat.pdx.edu/ubuntu/
 http://ubuntu.cs.utah.edu/ubuntu/
 http://ftp.ussg.iu.edu/linux/ubuntu/
@@ -95,7 +94,6 @@ http://ubuntu.mirrors.tds.net/pub/ubuntu/
 http://www.gtlib.gatech.edu/pub/ubuntu/
 http://archive.ubuntu.com.ba/ubuntu/
 http://ubuntu.ipacct.com/ubuntu/
-http://ubuntu.cn99.com/ubuntu/
 http://ftp.hosteurope.de/mirror/archive.ubuntu.com/
 http://ftp.u-picardie.fr/mirror/ubuntu/ubuntu/
 http://mirror.cc.columbia.edu/pub/linux/ubuntu/archive/
@@ -148,14 +146,11 @@ http://ftp.astral.ro/mirrors/ubuntu.com/ubuntu/
 http://ftp.caliu.cat/pub/distribucions/ubuntu/archive/
 http://ftp.cvut.cz/ubuntu/
 http://ftp.riken.jp/Linux/ubuntu/
-http://ubuntu.wallawalla.edu/ubuntu/
 http://mirror.isoc.org.il/pub/ubuntu/
 http://mirror.rol.ru/ubuntu/
-http://ftp.mtu.ru/pub/ubuntu/archive/
 http://ubuntu.stu.edu.tw/ubuntu/
 http://mirror.globo.com/ubuntu/archive/
 http://mirror.nus.edu.sg/ubuntu/
-http://www.ftp.ne.jp/Linux/packages/ubuntu/archive/
 http://mirror.math.ucdavis.edu/ubuntu/
 http://pf.archive.ubuntu.com/ubuntu/
 http://mirror-fpt-telecom.fpt.net/ubuntu/
@@ -167,13 +162,11 @@ http://ubuntu.ictvalleumbra.it/ubuntu/
 http://ftp.cs.pu.edu.tw/Linux/Ubuntu/ubuntu/
 http://mirror1.ku.ac.th/ubuntu/
 http://ucho.ignum.cz/ubuntu/
-http://archive.ubuntu.mirror.dkm.cz/
 http://ftp.tudelft.nl/archive.ubuntu.com/
 http://ftp.acc.umu.se/ubuntu/
 http://ftp.snt.utwente.nl/pub/os/linux/ubuntu/
 http://mirror.i3d.net/pub/ubuntu/
 http://mirror.pnl.gov/ubuntu/
-http://ubuntu.laps.ufpa.br/ubuntu/
 http://ubuntu.mirror.tudos.de/ubuntu/
 http://mirror.nl.leaseweb.net/ubuntu/
 http://mirror.us.leaseweb.net/ubuntu/
@@ -205,8 +198,6 @@ http://mirror.cse.iitk.ac.in/ubuntu/
 http://mirror.kavalinux.com/ubuntu/
 http://mirror.kku.ac.th/ubuntu/
 http://mirror.metrocast.net/ubuntu/
-http://mirror.neu.edu.cn/ubuntu/
-http://mirror.soften.ktu.lt/ubuntu/
 http://mirror.sov.uk.goscomb.net/ubuntu/
 http://mirror.steadfast.net/ubuntu/
 http://mirror.symnds.com/ubuntu/
@@ -217,15 +208,11 @@ http://mirror.unesp.br/ubuntu/
 http://mirror.unix-solutions.be/ubuntu/
 http://mirror.uoregon.edu/ubuntu/
 http://mirrors.accretive-networks.net/ubuntu/
-http://mirrors.coopvgg.com.ar/ubuntu/
-http://mirrors.fe.up.pt/ubuntu/
 http://mirrors.gigenet.com/ubuntuarchive/
 http://mirrors.ircam.fr/pub/ubuntu/archive/
 http://mirrors.melbourne.co.uk/ubuntu/
 http://mirrors.mit.edu/ubuntu/
-http://mirrors.sohu.com/ubuntu/
 http://mirrors.syringanetworks.net/ubuntu-archive/
-http://mirrors.telianet.dk/ubuntu/
 http://mirrors.ustc.edu.cn/ubuntu/
 http://osmirror.rug.nl/ubuntu/
 http://no.archive.ubuntu.com/ubuntu/
@@ -236,7 +223,6 @@ http://tux.rainside.sk/ubuntu/
 http://ubuntu-archive.locaweb.com.br/ubuntu/
 http://ubuntu-mirror.telesys.org.ua/ubuntu/
 http://ubuntu.cs.nctu.edu.tw/ubuntu/
-http://ubuntu.cybercomhosting.com/ubuntu/
 http://ubuntu.koyanet.lv/ubuntu/
 http://ubuntu.mirror.root.lu/ubuntu/
 http://ubuntu.mirror.vu.lt/ubuntu/
@@ -246,7 +232,6 @@ http://ubuntu.uib.no/archive/
 http://ubuntu.unitedcolo.de/ubuntu/
 http://ucmirror.canterbury.ac.nz/ubuntu/
 http://www-ftp.lip6.fr/pub/linux/distributions/Ubuntu/archive/
-http://www.club.cc.cmu.edu/pub/ubuntu/
 http://archive.ubuntu.nautile.nc/ubuntu/
 http://cosmos.cites.illinois.edu/pub/ubuntu/
 http://ftp.arnes.si/pub/mirrors/ubuntu/
@@ -258,17 +243,14 @@ http://mirror.hmc.edu/ubuntu/
 http://mirror.its.dal.ca/ubuntu/
 http://mirror.neolabs.kz/ubuntu/
 http://mirror.picosecond.org/ubuntu/
-http://mirror.squ.edu.om/ubuntuarchive/
 http://mirrors.bloomu.edu/ubuntu/
 http://ubuntu.mirrors.skynet.be/ubuntu/
-http://ubuntu.retrosnub.co.uk/ubuntu/
 http://ubuntu.securedservers.com/
 http://us.archive.ubuntu.com/ubuntu/
 http://distrib-coffee.ipsl.jussieu.fr/pub/linux/ubuntu/
 http://kartolo.sby.datautama.net.id/ubuntu/
 http://mirror.greennet.gl/ubuntu/
 http://mirror.pregi.net/ubuntu/
-http://buaya.klas.or.id/ubuntu/
 http://ftp.leg.uct.ac.za/ubuntu/
 http://mirror.waia.asn.au/ubuntu/
 http://ubuntu.grena.ge/ubuntu/
@@ -281,7 +263,6 @@ http://ftp.uni-bayreuth.de/linux/ubuntu/ubuntu/
 http://mirror.blizoo.mk/ubuntu/
 http://mirror.edatel.net.co/ubuntu/
 http://mirror.ubuntu.ikoula.com/ubuntu/
-http://mirror.xnet.co.nz/pub/ubuntu/
 http://ftp.uni-kassel.de/ubuntu/ubuntu/
 http://mirror.ancl.hawaii.edu/linux/ubuntu/
 http://mirror.crazynetwork.it/ubuntu/archive/
@@ -293,7 +274,6 @@ http://mirror.tocici.com/ubuntu/
 http://mirrors.advancedhosters.com/ubuntu/
 http://ubuntu.mirror.constant.com/
 http://ftp.cuhk.edu.hk/pub/Linux/ubuntu/
-http://ftp.hawo.stw.uni-erlangen.de/ubuntu/
 http://ftp.uni-mainz.de/ubuntu/
 http://mirror.cogentco.com/pub/linux/ubuntu/
 http://mirror.easyspeedy.com/ubuntu/
@@ -306,11 +286,8 @@ http://mirrors.liquidweb.com/ubuntu/
 http://mirrors.yun-idc.com/ubuntu/
 http://ubuntu-archive.mirror.nucleus.be/
 http://ubuntu-archive.mirror.serveriai.lt/
-http://ubuntu.01link.hk/
 http://ubuntu.bhs.mirrors.ovh.net/ftp.ubuntu.com/ubuntu/
 http://ubuntu.ip-connect.vn.ua/
-http://ubuntu.uhost.hk/
-ftp://ftp.cesca.cat/ubuntu/archieve/
 http://mirror.dhakacom.com/ubuntu/
 http://mirror.logol.ru/ubuntu/
 http://mirror2.tuxinator.org/ubuntu/
@@ -362,7 +339,6 @@ http://mirrors.usinternet.com/ubuntu/archive/
 http://mirror.ni.net.tr/ubuntu/
 http://pubmirrors.dal.corespace.com/ubuntu/
 http://repo.bigstepcloud.com/ubuntu/
-http://ubuntu-archive.mirror.liquidtelecom.com/ubuntu/
 http://ubuntu-mirror.neocom.org.ua/ubuntu/
 http://ubuntu.hysing.is/ubuntu/
 http://ubuntu.mirror.digitalpacific.com.au/archive/
@@ -373,9 +349,7 @@ http://ubuntu.saglayici.com/ubuntu/
 http://ubuntuarchive.mirror.nac.net/
 http://dist1.800hosting.com/ubuntu/
 http://mirror.aptus.co.tz/pub/ubuntuarchive/
-http://mirror.cedia.org.ec/ubuntu/
 http://mirror.iranserver.com/ubuntu/
-http://mirror.premi.st/ubuntu/
 http://mirror.rise.ph/ubuntu/
 http://mirror01.idc.hinet.net/ubuntu/
 http://mirrors.asnet.am/ubuntu/
@@ -392,14 +366,12 @@ http://mirror.onet.pl/pub/mirrors/ubuntu/
 http://mirror.nforce.com/pub/linux/ubuntu/
 http://ubuntu.trumpetti.atm.tut.fi/ubuntu/
 http://artfiles.org/ubuntu.com/
-http://mirrors.ccs.neu.edu/ubuntu/
 http://mirrors.maine.edu/ubuntu/
 http://mirrors.nhanhoa.com/ubuntu/
 http://mirror.mythic-beasts.com/ubuntu/
 http://ftp.rz.tu-bs.de/pub/mirror/ubuntu-packages/
 http://ubuntu.mirror.garr.it/ubuntu/
 http://mirrors.eastera.tj/ubuntu/
-http://mirror.team-cymru.org/ubuntu/
 http://ubuntu.inode.at/ubuntu/
 http://ubuntu.uni-sofia.bg/ubuntu/
 http://ftp.udc.es/ubuntu/
@@ -424,14 +396,12 @@ http://gaosu.rave.org/ubuntu/
 http://ftp.stust.edu.tw/pub/Linux/ubuntu/
 http://ubuntu.gnu.gen.tr/ubuntu/
 http://debian.linux.org.tw/ubuntu/
-http://mirrors.ulbsibiu.ro/ubuntu/
 http://ubuntu.tsl.gr/
 http://mirror.tcc.wa.edu.au/ubuntu/
 http://ubuntu.uc3m.es/ubuntu/
 http://mirrors.neterra.net/ubuntu/
 ftp://ftp.man.szczecin.pl/pub/Linux/ubuntu/
 http://ftp.iinet.net.au/pub/ubuntu/
-http://www.las.ic.unicamp.br/pub/ubuntu/
 http://ubuntu.ntc.net.np/ubuntu/
 http://mirror.sax.uk.as61049.net/ubuntu/
 http://ftp.aso.ee/ubuntu/
@@ -441,26 +411,69 @@ http://ubuntu.dcc.fc.up.pt/
 http://mirror.earthlink.iq/ubuntu/
 http://ftp.utexas.edu/ubuntu/
 http://mirrors.cug.edu.cn/ubuntu/
-http://ubuntu.lionlike.com/ubuntu/
 http://giano.com.dist.unige.it/ubuntu/
 http://mirror.math.princeton.edu/pub/ubuntu/
-http://mirror.n5tech.com/ubuntu/
 http://mirror.datacenter.az/ubuntu/
 http://ftp.ubuntu-tw.net/ubuntu/
-http://run.hit.edu.cn/ubuntu/
 http://mirrors.acm.jhu.edu/ubuntu/
-http://mirror.evolvedservers.com/ubuntu-archive/
 http://ftp.stw-bonn.de/ubuntu/
-http://mirror.scalabledns.com/ubuntu/
 http://mirrors.wikimedia.org/ubuntu/
-http://linux.psu.ru/ubuntu/
 http://ftp.klid.dk/ftp/ubuntu/
 http://mirror.freethought-internet.co.uk/ubuntu/
 http://ftp.uni-stuttgart.de/ubuntu/
-http://ubuntu.asis.io/
 http://ubuntu.fastbull.org/ubuntu/
 http://mirrors.easynews.com/linux/ubuntu/
 http://ubuntu.mirror.lhisp.com/ubuntu/
-http://mirror.aminidc.com/ubuntu/ubuntu/
 http://ftp.estpak.ee/ubuntu/
 http://ubuntu.parspack.com/ubuntu/
+http://mirrors.cn99.com/ubuntu/
+http://mirror.faraso.org/ubuntu/
+http://archive.ubuntu.mirrors.opensource.ynu.edu.cn/
+http://dafi.inf.um.es/ubuntu/
+http://ubuntu.mirrors.omnilance.com/ubuntu/
+http://it-mirrors.evowise.com/ubuntu/
+http://ny-mirrors.evowise.com/ubuntu/
+ftp://ftp.csuc.cat/ubuntu/archieve/
+http://ftp.sh.cvut.cz/ubuntu/
+http://ubuntu.mirror.ftn.uns.ac.rs/archive/
+http://ubuntu.skybroadband.com.ph/ubuntu/
+http://ubuntu.uestc.edu.cn/ubuntu/
+http://uk-mirrors.evowise.com/ubuntu/
+http://ftp.cs.pu.edu.tw/Linux/Ubuntu/Archive/
+http://mirror.espol.edu.ec/ubuntu/
+http://ubuntu.uniminuto.edu/ubuntu/
+http://ubuntu-mirror.parsdev.net/ubuntu-archive/
+http://mirror.aminidc.com/ubuntu/
+http://ubuntu.man.lodz.pl/ubuntu/
+http://linux.yz.yamagata-u.ac.jp/pub/linux/ubuntu-archive/
+http://mirror.its.sfu.ca/mirror/ubuntu/
+http://repos.forethought.net/ubuntu/
+http://repo.unpatti.ac.id/ubuntu/
+http://mirror.intergrid.com.au/ubuntu/
+http://mirror.ufscar.br/ubuntu/
+http://mirrors.dk.telia.net/ubuntu/
+http://ubuntu.dts.mg/ubuntu/
+http://la-mirrors.evowise.com/ubuntu/
+http://mirror.0x.sg/ubuntu/
+http://mirror.rasanegar.com/ubuntu/archive/
+http://ubuntu.mirror.true.nl/ubuntu/
+http://mirror.atomki.mta.hu/ubuntu/
+http://fastmirror.ir/ubuntu/
+http://mirror.vnet.sk/ubuntu/
+http://mirrors.xjtu.edu.cn/ubuntu/
+http://mirror1.totbb.net/ubuntu/
+http://mirrors.psychz.net/Ubuntu/
+http://ubuntu.mirror.neology.co.za/ubuntu/
+http://mirror.sjc02.svwh.net/ubuntu/
+http://mirror.cedille.club/ubuntu/
+http://mirror.digistar.vn/ubuntu/
+http://mirror.daniel-jost.net/ubuntu/
+http://es-mirrors.evowise.com/ubuntu/
+http://mirror.dataone.nl/ubuntu-archive/
+http://muug.ca/mirror/ubuntu/
+http://mirror.wiru.co.za/ubuntu/
+http://mirrors.up.pt/ubuntu/
+http://repo.cure.edu.uy/ubuntu/archivos/
+http://mirror.dkm.cz/ubuntu/
+http://ro-mirrors.evowise.com/ubuntu/
+http://mirror.os6.org/ubuntu/
